# StoryForge

./: .gitignore  SAMPLE_STORIES.json  agent_notebook.ipynb  config.py  pyproject.toml  story_metrics_story_20250607_150030.json  storyforge_app.py
agents/: critic_agent.py  historical_branch.py  historical_orchestrator.py  story_builder.py  storyteller.py  style_adapter.py
graphs_images/: StoryForge - Architecture.excalidraw
notenooks/: Image_generator.ipynb  agent_notebook.ipynb
routes/: story_router.py
src/: gen_story.py
src/app/graphs/: main_graph.py
src/app/prompts/: prompts.py
src/app/subgraphs/: aesop_graph.py
src/config/: logger.py  models_settings.py  settings.py
src/metadata_tracker/: metadata_tracker.py
utils/: question_generator.py  research_tool.py
